<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.maxim.laba3.RegActivity">

    <ImageView
        android:layout_width="115dp"
        android:layout_height="221dp"
        android:src="@drawable/android" />

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_login"
        android:gravity="center"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:gravity="center"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editPass2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_again_pass"
        android:gravity="center"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_name"
        android:gravity="center"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_date"
        android:gravity="center"
        android:inputType="date" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/action_reg" />

</LinearLayout>
